--- a/Views/Quiz/Index.cshtml
+++ b/Views/Quiz/Index.cshtml
@@ -55,28 +55,28 @@
 
         </div>
         <div class=" col-lg-6 col-md-6 d-xs-none">
-            <div id="imageCarousel" class="carousel slide" data-interval="2000" 
+            <div id="imageCarousel" class="carousel slide" data-interval="5000" 
                  data-ride="carousel" data-pause="hover" data-wrap="true">
 
-                <ol class="carousel-indicators">
-                    <li data-target="#imageCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#imageCarousel" data-slide-to="1"></li>
-                    <li data-target="#imageCarousel" data-slide-to="2"></li>
-                    <li data-target="#imageCarousel" data-slide-to="3"></li>
-                </ol>
+                <div class=" carousel-indicators">
+                    <button data-bs-target="#imageCarousel" data-bs-slide-to="0" class="active"></button>
+                    <button data-bs-target="#imageCarousel" data-bs-slide-to="1"></button>
+                    <button data-bs-target="#imageCarousel" data-bs-slide-to="2"></button>
+                    <button data-bs-target="#imageCarousel" data-bs-slide-to="3"></button>
+                </div>
 
-                <div class=" carousel-inner">
+                <div class=" carousel-inner h-100">
                    
                     <div class=" carousel-item active">
-                        <img src="~/photos/map-of-nepal-showing-new-provincial-boundaries-adapted-by-the-authors-from-ministry-of.png"  class=" img-fluid" />
+                        <img src="~/photos/map-of-nepal-showing-new-provincial-boundaries-adapted-by-the-authors-from-ministry-of.png" class=" img-fluid w-100 h-100" />
                         
                     </div>
                     <div class=" carousel-item">
-                        <img src="~/photos/psc.jpg" class="img-fluid" />
+                        <img src="~/photos/psc.jpg" class="img-fluid w-100 h-100" />
                         
                     </div>
                     <div class="carousel-item">
-                        <img src="~/photos/screenshot 2023-08-08 080837.jpg" class="img-fluid" />
+                        <img src="~/photos/screenshot 2023-08-08 080837.jpg" class="img-fluid w-100 h-100" />
 
                     </div>
                     <div class="carousel-item">
@@ -86,12 +86,14 @@
                     
                 </div>
 
-                <a href="#imageCarousel" class="carousel-control left" data-slide="prev">
-                    <span class=" glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a href="#imageCarousel" class="carousel-control right" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
+                <button class="carousel-control-prev" type="button" data-target="#imageCarousel" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    
+                </button>
+                <button class="carousel-control-next" type="button" data-target="#imageCarousel" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    
+                </button>
             </div>
         </div>
         <div class="col-md-3 col-sm-12">
