Work with NavSearch

--- a/Views/Quiz/Index.cshtml
+++ b/Views/Quiz/Index.cshtml
@@ -99,7 +99,7 @@
         <div class="col-md-3 col-sm-12">
             <table class="table-bordered" style="border: thick 2px">
                 <tr>
-                <th class="text-warning">
+                <th class="text-info" style="font-family: Arial; font-size: 16px">
                     Crack the Irongate with us.
                 </th>
                 </tr>
