--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -12,22 +10,22 @@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/css/bootstrap-grid.min.css" rel="stylesheet" />
     <link href="~/lib/jqueryui/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap/css/bootstrap-utilities.min.css" rel="stylesheet" />
     <link href="~/lib/jqueryui/themes/ui-lightness/theme.css" rel="stylesheet" />
+
+    @*mastercss*@
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 
     @*css for datatables*@
     <link href="~/css/datatables.css" rel="stylesheet" />
     <link href="~/css/datatables.min.css" rel="stylesheet" />
-
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
    
-
     @*cssfor ckeditor*@
     <link href="~/lib/ckeditor5-build-classic/sample/css/sample.css" rel="stylesheet" />
-    
-    
+
+    @*scriptshere*@
     <script src="~/lib/jquery/jquery.js"></script>
-    
-    
+
 </head>
 <body>
     <div class="container">
@@ -40,23 +38,25 @@
         </main>
     </div>
 
+    
+
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - IQMania - <a href="https://www.swifttech.com.np/" target="_blank">Developed by Swift Technology</a>
         </div>
     </footer>
+   
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/jqueryui/jquery-ui.js"></script>
-   
 
     @*popper*@@*script for bootstrap*@
-
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-   
     
-    @*global js*@
+    <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
+        @*global js*@
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     @*datatable plugins*@
