--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,8 +14,8 @@ html {
 
 .mynavbar{
     font-family:Arial;
-    background-color: gainsboro;
-    margin-right:7px;
+    background-color: lightgreen
+    
 }
 
 .mynavitem{
