--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,8 +24,7 @@
     <link href="~/lib/ckeditor5-build-classic/sample/css/sample.css" rel="stylesheet" />
 
     @*scriptshere*@
-    <script src="~/lib/jquery/jquery.js"></script>
-
+    <script src="~/lib/jquery/jquery.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -46,7 +45,7 @@
         </div>
     </footer>
    
-    <script src="~/lib/jquery/jquery.js"></script>
+    <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/jqueryui/jquery-ui.js"></script>
 
     @*popper*@@*script for bootstrap*@
