--- a/Views/Account/Signup.cshtml
+++ b/Views/Account/Signup.cshtml
@@ -32,7 +32,7 @@
                  <label for="Password">Password</label>
              <div class="input-group mb-3">
                     <input type="password" class="form-control border-dark" asp-for="Password" placeholder="Enter Password" />
-                        <span class="input-group-text"><img src="~/photos/icon/seeicon.png" /></span>
+                        <span class="passwordvisibility input-group-text border-dark"><img src="~/photos/icon/seeicon.png" /></span>
                 </div>
                     <span asp-validation-for="Password" class="text-danger"></span>
              </div>
@@ -41,12 +41,12 @@
                  <label for="ConfirmPassword">Confirm Password</label>
                     <div class="input-group mb-3">
                         <input type="password" class="form-control border-dark" asp-for="ConfirmPassword" placeholder="Enter Password" />
-                        <span class="input-group-text"><img src="~/photos/icon/seeicon.png" /></span>
+                        <span class="passwordvisibility input-group-text border-dark"><img src="~/photos/icon/seeicon.png" /></span>
                     </div>
                  <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
              </div>
                 <br />
-        <button class="btn btn-info" type="submit">Register</button>
+                 <button class="btn btn-info" type="submit">Register</button>
                 <button class="btn btn-primary" asp-action="Login" asp-controller="Account" formmethod="get">Login Instead?</button>
 
             </form>
@@ -54,3 +54,16 @@
         </div>
     </div>
 </div>
+
+@section Scripts{
+
+<script type="text/javascript">
+        $(function () {
+            $('.passwordvisibility').mousedown(function () {
+                $(this).prev().attr('type', 'text');
+            }).mouseup(function () {
+                $(this).prev().attr('type', 'password');
+            });
+        });
+</script>
+}
